[b]Version 14.9.0.x[/b]:

(2015-06-24)
 * Possibility to disable MPRIS2 in smplayer.ini (option use_mpris2).

(2015-06-22)
 * Fix volume when using softvol with newer versions of mpv.

(2015-06-12)
 * (Windows) Disable MPRIS2 with Qt 5.

(2015-06-10)
 * Reduce the time to activate the floating control from 500ms to 100ms.

(2015-06-05)
 * Add option for command-line: -media-title

(2015-06-02)
 * Fix thumbnail creation with newer versions of mpv.

(2015-05-28)
 * (mpv) Use --input-file=/dev/stdin instead of --slave-broken.

(2015-05-21)
 * Fix the audio and video bitrate info with newer versions of mpv.

(2015-04-23)
 * Apply patch to handle PTS rollover at MPEG-TS.

(2015-04-13)
 * Add a 3D stereo filter.

(2015-04-10)
 * Add support for MPRIS D-Bus Interface (http://specifications.freedesktop.org/mpris-spec/latest/)
   Based on a patch for smplayer2 (https://github.com/lachs0r/SMPlayer2/commit/cea863e6b75f00c93da95d1a73d696cf717adf78.patch)
   and a patch by WiseLord (http://forum.smplayer.info/viewtopic.php?p=11548#p11548)

(2015-03-22)
 * (mpv) Use the --sub-text-* options to set the style of the subtitles since
   the option --ass-styles doesn't work anymore for this.

(2015-03-13)
 * Add the possibility to delete a file in the playlist from the filesystem.
   Based on a patch by capt.d.:
   http://forum.smplayer.info/viewtopic.php?p=11220#p11220

(2015-03-04)
 * Add the possibility to use the mouse buttons for the actions
   "next chapter" and "previous chapter".

(2015-03-02)
 * The kerndeint filter works with mpv.
 * Changing the deinterlace filter doesn't restart mpv.

(2015-02-28)
 * Now the rotate filter doesn't restart mpv.

(2015-02-26)
 * The flip and mirror options don't restart mpv.
 * The deblock, dering, denoise and phase filters don't restart mpv.

(2015-02-25)
 * The blur and sharpen filters don't restart mpv.

(2015-02-23)
 * Change the play/pause icon according to the player state in the default
   and mini GUIs.

(2015-02-19)